# scivis-qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ml/: generate_presets.py  train_and_export.py
qml/: Main.qml  ScatterView.qml
src/: MainWindow.cpp  MainWindow.h  ScatterData.cpp  ScatterData.h  ScatterView.cpp  ScatterView.h  ScatterViewBase.cpp  ScatterViewBase.h  ScatterWidget.cpp  ScatterWidget.h  main.cpp
tests/: CMakeLists.txt  tst_scatterdata.cpp  tst_scatterwidget.cpp
